@@ -50,20 +50,12 @@ namespace SimpleInjector.Lifestyles
         // ExpressionBuilding event is called with a ConstantExpression, which is much more intuitive to
         // anyone handling that event.
         internal static Registration CreateSingleRegistration(Type serviceType, object instance, 
-            Container container, Type implementationType = null)
+            Container container)
         {
             Requires.IsNotNull(instance, "instance");
 
-            // When running in a sandbox, getting the type of the instance might work when the type is
-            // internal. We might to walk the hierarchy up from the implementation type to the service type
-            // and get the first public base type (or interface) we encounter, or perhaps simply fall back to
-            // the service type directly. Problem with this is that we probably don't want to let the fx
-            // behave differently inside a sandbox, since that would confuse users.
-            // TODO: Find out if this is a problem and how to go around this.
-            implementationType = implementationType ?? instance.GetType();
-
-            return new SingletonInstanceLifestyleRegistration(serviceType, implementationType, instance, 
-                Lifestyle.Singleton, container);
+            return new SingletonInstanceLifestyleRegistration(serviceType, instance, Lifestyle.Singleton, 
+                container);
         }
 
         protected override Registration CreateRegistrationCore<TService, TImplementation>(
@@ -82,16 +74,14 @@ namespace SimpleInjector.Lifestyles
         {
             private readonly object originalInstance;
             private readonly Type serviceType;
-            private readonly Type implementationType;
             private readonly Lazy<object> initializedInstance;
 
-            internal SingletonInstanceLifestyleRegistration(Type serviceType, Type implementationType, 
-                object instance, Lifestyle lifestyle, Container container)
+            internal SingletonInstanceLifestyleRegistration(Type serviceType, object instance, 
+                Lifestyle lifestyle, Container container)
                 : base(lifestyle, container)
             {
                 this.originalInstance = instance;
                 this.serviceType = serviceType;
-                this.implementationType = implementationType;
 
                 // Default lazy behavior ensures that the initializer is guaranteed to be called just once.
                 this.initializedInstance = new Lazy<object>(this.GetInjectedInterceptedAndInitializedInstance);
@@ -99,7 +89,7 @@ namespace SimpleInjector.Lifestyles
 
             public override Type ImplementationType
             {
-                get { return this.implementationType; }
+                get { return this.serviceType; }
             }
 
             public override Expression BuildExpression()
@@ -124,15 +114,16 @@ namespace SimpleInjector.Lifestyles
             {
                 Expression expression = Expression.Constant(this.originalInstance, this.serviceType);
 
-                expression = this.WrapWithPropertyInjector(this.serviceType, this.implementationType, expression);
+                expression = this.WrapWithPropertyInjector(this.serviceType, this.serviceType, expression);
 
-                expression = this.InterceptInstanceCreation(this.serviceType, this.implementationType, expression);
+                expression = this.InterceptInstanceCreation(this.serviceType, this.serviceType, expression);
 
-                expression = this.WrapWithInitializer(this.serviceType, this.implementationType, expression);
+                expression = this.WrapWithInitializer(this.serviceType, this.serviceType, expression);
 
                 var initializer = Expression.Lambda(expression).Compile();
 
-                // This delegate might return a different instance than the originalInstance.
+                // This delegate might return a different instance than the originalInstance (caused by a
+                // possible interceptor).
                 return initializer.DynamicInvoke();
             }
         }
